p3/confs/ingress/argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: traefik
  name: ingress-argocd.askhalog.space
  namespace: argocd
  labels:
    app: argocd
spec:
  rules:
  - http:
      paths:
      - path: /argocd
        pathType: Prefix
        backend:
          service:
              name: argocd-server
              port:
                number: 80
